<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cc03532.dungeonsanddragons.StepZeroWelcomeScreen">

    <Button
        android:id="@+id/bCharacterNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/newCharacter" />
    <Button
        android:id="@+id/bCharacterEdit"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/bCharacterNew"
        android:text="@string/editCharacter"/>
    <Spinner
        android:id="@+id/spCharacterSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/bCharacterEdit" />
    <Button
        android:id="@+id/bCharacterDelete"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/spCharacterSelect"
        android:text="@string/deleteCharacter"/>

    <Button
        android:id="@+id/bLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
