<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:stackFromBottom="true"
    android:transcriptMode="alwaysScroll" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.cc03532.dungeonsanddragons.StepThreeAbilityScores">

    <TextView
        android:id="@+id/step_three_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_three_text"/>

        <RadioGroup
            android:id="@+id/rbAbility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/select_ability_scores" />
            <RadioButton
                android:id="@+id/rbRoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/roll_ability_scores" />
        </RadioGroup>

    <TextView
        android:id="@+id/tvRemainingPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/strength_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/strength_text"/>

        <NumberPicker
            android:id="@+id/strength_picker"
            android:theme="@style/AppTheme.Picker"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:scaleX="0.75"
            android:scaleY="0.75"/>

        <Spinner
            android:id="@+id/strength_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/dexterity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/dexterity_text"/>

        <NumberPicker
            android:id="@+id/dexterity_picker"
            android:theme="@style/AppTheme.Picker"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:scaleX="0.75"
            android:scaleY="0.75"/>

        <Spinner
            android:id="@+id/dexterity_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/constitution_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/constitution_text"/>

        <NumberPicker
            android:id="@+id/constitution_picker"
            android:theme="@style/AppTheme.Picker"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:scaleX="0.75"
            android:scaleY="0.75"/>

        <Spinner
            android:id="@+id/constitution_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/intelligence_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/intelligence_text"/>

        <NumberPicker
            android:id="@+id/intelligence_picker"
            android:theme="@style/AppTheme.Picker"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:scaleX="0.75"
            android:scaleY="0.75"/>

        <Spinner
            android:id="@+id/intelligence_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/wisdom_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/wisdom_text"/>

        <NumberPicker
            android:id="@+id/wisdom_picker"
            android:theme="@style/AppTheme.Picker"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:scaleX="0.75"
            android:scaleY="0.75"/>

        <Spinner
            android:id="@+id/wisdom_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/charisma_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/charisma_text"/>

        <NumberPicker
            android:id="@+id/charisma_picker"
            android:theme="@style/AppTheme.Picker"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:scaleX="0.75"
            android:scaleY="0.75"/>

        <Spinner
            android:id="@+id/charisma_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    <Button
        android:id="@+id/step_three_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="stepThreeSubmit"
        android:text="@string/next"/>

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>
    </ScrollView>