<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cc03532.dungeonsanddragons.StepTwoClass">

    <TextView
        android:id="@+id/step_two_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_two_text"/>

    <TextView
        android:id="@+id/class_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step_two_header"
        android:text="@string/class_text"/>

    <Spinner
        android:id="@+id/class_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/class_label"/>

    <TextView
        android:id="@+id/class_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/class_spinner"/>

    <Button
        android:id="@+id/step_two_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/class_description"
        android:onClick="stepTwoSubmit"
        android:text="@string/next"/>

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/step_two_submit"/>

</RelativeLayout>
