<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cc03532.dungeonsanddragons.StepOneRace">

    <TextView
        android:id="@+id/step_one_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_one_text"/>

    <TextView
        android:id="@+id/race_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step_one_header"
        android:text="@string/race_text"/>

    <Spinner
        android:id="@+id/race_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/race_label"/>

    <Button
        android:id="@+id/race_random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/race_label"
        android:layout_toRightOf="@+id/race_spinner"
        android:layout_toEndOf="@id/race_spinner"
        android:text="@string/random"
        android:onClick="raceRandomizer"/>

    <TextView
        android:id="@+id/race_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/race_spinner"/>

    <TextView
        android:id="@+id/subrace_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/race_description"
        android:text="@string/subrace_text"/>

    <Spinner
        android:id="@+id/subrace_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subrace_label"/>

    <Button
        android:id="@+id/subrace_random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subrace_label"
        android:layout_toRightOf="@+id/subrace_spinner"
        android:layout_toEndOf="@id/subrace_spinner"
        android:text="@string/random"
        android:onClick="subraceRandomizer"/>

    <TextView
        android:id="@+id/subrace_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subrace_spinner"/>

    <Button
        android:id="@+id/step_one_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subrace_description"
        android:onClick="stepOneSubmit"/>

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step_one_submit"/>


</RelativeLayout>
